--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -1,79 +1,79 @@
 <script type="text/x-red" data-template-name="klicktipp tag create">
-    <div class="form-row">
-        <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-        <input type="text" id="node-input-klicktipp" data-i18n="config node">
-    </div>
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-input-name" placeholder="Enter node name">
-    </div>
+	<div class="form-row">
+	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	</div>
+	<div class="form-row">
+	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	    <input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp tag create">
-    <p>Creates a new manual tag in the KlickTipp API based on the provided tag name and optional description.</p>
-    <h3>Inputs</h3>
-    <dl class="message-properties">
-        <dt>msg.klicktipp <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-                <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-            </ul>
-        </dd>
-        <dt>msg.payload <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>name</code> - The name of the tag to create (required).</li>
-                <li><code>text</code> - An description of the tag (optional).</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Outputs</h3>
-    <dl class="message-properties">
-        <dt>On success:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - The ID of the newly created tag.</li>
-            </ul>
-        </dd>
-        <dt>On failure:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-                <li><code>msg.error</code> - Will contain an error message describing what went wrong.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Node Status</h3>
-    <ul>
-        <li><strong>Green (dot)</strong> - The tag was created successfully.</li>
-        <li><strong>Red (ring)</strong> - Failed to create the tag (e.g., missing tag name or API error).</li>
-    </ul>
-    <h3>Details</h3>
-    <p>
-        This node creates a new manual tag in the KlickTipp system. It requires a valid session (both <code>sessionId</code> and
-        <code>sessionName</code>) provided via <code>msg.klicktipp</code>, and the tag name is required in
-        <code>msg.payload.name</code>. Optionally, a description can be added using <code>msg.payload.text</code>.
-        On success, it returns the ID of the newly created tag in <code>msg.payload</code>. On failure, <code>msg.payload</code>
-        will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-    </p>
+	<p>Creates a new manual tag in the KlickTipp API based on the provided tag name and optional description.</p>
+	<h3>Inputs</h3>
+	<dl class="message-properties">
+	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
+	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
+	        </ul>
+	    </dd>
+	    <dt>msg.payload <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>name</code> - The name of the tag to create (required).</li>
+	            <li><code>text</code> - An description of the tag (optional).</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+	    <dt>On success:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - The ID of the newly created tag.</li>
+	        </ul>
+	    </dd>
+	    <dt>On failure:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	            <li><code>msg.error</code> - Will contain an error message describing what went wrong.</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Node Status</h3>
+	<ul>
+	    <li><strong>Green (dot)</strong> - The tag was created successfully.</li>
+	    <li><strong>Red (ring)</strong> - Failed to create the tag (e.g., missing tag name or API error).</li>
+	</ul>
+	<h3>Details</h3>
+	<p>
+	    This node creates a new manual tag in the KlickTipp system. It requires a valid session (both <code>sessionId</code> and
+	    <code>sessionName</code>) provided via <code>msg.klicktipp</code>, and the tag name is required in
+	    <code>msg.payload.name</code>. Optionally, a description can be added using <code>msg.payload.text</code>.
+	    On success, it returns the ID of the newly created tag in <code>msg.payload</code>. On failure, <code>msg.payload</code>
+	    will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp tag create', {
 		category: 'KlickTipp',
-		color: "#a6bbcf",
+		color: '#F2F2F2',
 		defaults: {
-			klicktipp: { type: "klicktipp-config", required: true },
-			name: { value: "" }
+			klicktipp: { type: 'klicktipp-config', required: true },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: "klicktipp.png",
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || "KlickTipp Tag Create";
-		}
+			return this.name || 'KlickTipp Tag Create';
+		},
 	});
 </script>
