--- a/nodes/klicktipp-config.html
+++ b/nodes/klicktipp-config.html
@@ -1,30 +1,30 @@
 <script type="text/x-red" data-template-name="klicktipp-config">
-    <div class="form-row">
-        <label for="node-config-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-config-input-name" placeholder="Enter a name for this config">
-    </div>
-    <div class="form-row">
-        <label for="node-config-input-username"><i class="fa fa-user"></i> <span>Username</span></label>
-        <input type="text" id="node-config-input-username" placeholder="Enter your KlickTipp username">
-    </div>
-    <div class="form-row">
-        <label for="node-config-input-password"><i class="fa fa-key"></i> <span>Password</span></label>
-        <input type="password" id="node-config-input-password" placeholder="Enter your KlickTipp password">
-    </div>
+	<div class="form-row">
+	    <label for="node-config-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	    <input type="text" id="node-config-input-name" placeholder="Enter a name for this config">
+	</div>
+	<div class="form-row">
+	    <label for="node-config-input-username"><i class="fa fa-user"></i> <span>Username</span></label>
+	    <input type="text" id="node-config-input-username" placeholder="Enter your KlickTipp username">
+	</div>
+	<div class="form-row">
+	    <label for="node-config-input-password"><i class="fa fa-key"></i> <span>Password</span></label>
+	    <input type="password" id="node-config-input-password" placeholder="Enter your KlickTipp password">
+	</div>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-config', {
 		category: 'config',
 		defaults: {
-			name: { value: "" }
+			name: { value: '' },
 		},
 		credentials: {
-			username: { type: "text" },
-			password: { type: "password" }
+			username: { type: 'text' },
+			password: { type: 'password' },
 		},
 		label: function () {
-			return this.name || "KlickTipp Config";
-		}
+			return this.name || 'KlickTipp Config';
+		},
 	});
 </script>
