--- a/nodes/klicktipp-logout.html
+++ b/nodes/klicktipp-logout.html
@@ -1,64 +1,64 @@
 <script type="text/x-red" data-template-name="klicktipp logout">
-    <div class="form-row">
-        <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-        <input type="text" id="node-input-klicktipp">
-    </div>
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-input-name" placeholder="Enter node name">
-    </div>
+	<div class="form-row">
+	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	    <input type="text" id="node-input-klicktipp">
+	</div>
+	<div class="form-row">
+	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	    <input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp logout">
-    <p>Logs out of the KlickTipp API, ending the session.</p>
-    <h3>Inputs</h3>
-    <dl class="message-properties">
-        <dt>msg.klicktipp <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-                <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Outputs</h3>
-    <dl class="message-properties">
-        <dd>
-            On success:
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-            </ul>
-            On failure:
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-                <li><code>msg.error</code> - The error message if the logout fails.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Node Status</h3>
-    <ul>
-        <li><strong>Yellow (dot)</strong> - Logout was successful.</li>
-        <li><strong>Red (ring)</strong> - Logout failed due to an error.</li>
-    </ul>
-    <h3>Details</h3>
-    <p>This node requires session information to be passed in <code>msg.klicktipp</code>, containing <code>sessionId</code> and <code>sessionName</code> from a successful login. Once the logout is performed, the session is invalidated, and subsequent API requests will fail until a new session is established.</p>
-    <p>If an error occurs during the logout process, the error message will be returned in <code>msg.error</code> for further handling or logging purposes.</p>
+	<p>Logs out of the KlickTipp API, ending the session.</p>
+	<h3>Inputs</h3>
+	<dl class="message-properties">
+	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
+	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+	    <dd>
+	        On success:
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
+	        </ul>
+	        On failure:
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	            <li><code>msg.error</code> - The error message if the logout fails.</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Node Status</h3>
+	<ul>
+	    <li><strong>Yellow (dot)</strong> - Logout was successful.</li>
+	    <li><strong>Red (ring)</strong> - Logout failed due to an error.</li>
+	</ul>
+	<h3>Details</h3>
+	<p>This node requires session information to be passed in <code>msg.klicktipp</code>, containing <code>sessionId</code> and <code>sessionName</code> from a successful login. Once the logout is performed, the session is invalidated, and subsequent API requests will fail until a new session is established.</p>
+	<p>If an error occurs during the logout process, the error message will be returned in <code>msg.error</code> for further handling or logging purposes.</p>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp logout', {
 		category: 'KlickTipp',
-		color: "#a6bbcf",
+		color: '#F2F2F2',
 		defaults: {
-			klicktipp: {type: "klicktipp-config", required: true},
-			name: {value: ""}
+			klicktipp: { type: 'klicktipp-config', required: true },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: "klicktipp.png",
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || "KlickTipp Logout";
-		}
+			return this.name || 'KlickTipp Logout';
+		},
 	});
 </script>
