--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -1,82 +1,82 @@
 <script type="text/x-red" data-template-name="klicktipp subscriber update">
-    <div class="form-row">
-        <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-        <input type="text" id="node-input-klicktipp" data-i18n="config node">
-    </div>
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-input-name" placeholder="Enter node name">
-    </div>
+	<div class="form-row">
+	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	</div>
+	<div class="form-row">
+	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	    <input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscriber update">
-    <p>Updates a subscriber in KlickTipp by their subscriber ID. You can update the subscriber's fields, email, or SMS number. This node requires valid session information to perform the action.</p>
-    <h3>Inputs</h3>
-    <dl class="message-properties">
-        <dt>msg.payload <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>subscriberId</code> - (Required) The ID of the subscriber to be updated.</li>
-                <li><code>fields</code> - (Optional) An object representing fields to update for the subscriber.</li>
-                <li><code>newEmail</code> - (Optional) The new email address for the subscriber.</li>
-                <li><code>newSmsNumber</code> - (Optional) The new SMS number for the subscriber.</li>
-            </ul>
-        </dd>
-        <dt>msg.klicktipp <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-                <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Outputs</h3>
-    <dl class="message-properties">
-        <dt>On success:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-            </ul>
-        </dd>
-        <dt>On failure:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-                <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing subscriber ID" or API error message).</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Node Status</h3>
-    <ul>
-        <li><strong>Green (dot)</strong> - Subscriber was updated successfully.</li>
-        <li><strong>Red (ring)</strong> - Failed to update subscriber (e.g., missing subscriber ID, invalid data, or API error).</li>
-    </ul>
-    <h3>Details</h3>
-    <p>
-        This node updates a subscriber in KlickTipp using their subscriber ID. The subscriber ID must be provided in
-        <code>msg.payload.subscriberId</code>. You can update various subscriber details, such as their fields, email, or SMS number.
-        If no data is provided, the node will not perform the update. Valid session information, including <code>sessionId</code>
-        and <code>sessionName</code>, must be provided in <code>msg.klicktipp</code>. If the operation is successful, the output message
-        will contain <code>msg.payload.success = true</code>. On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>,
-        and an error message will be returned in <code>msg.error</code>.
-    </p>
+	<p>Updates a subscriber in KlickTipp by their subscriber ID. You can update the subscriber's fields, email, or SMS number. This node requires valid session information to perform the action.</p>
+	<h3>Inputs</h3>
+	<dl class="message-properties">
+	    <dt>msg.payload <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>subscriberId</code> - (Required) The ID of the subscriber to be updated.</li>
+	            <li><code>fields</code> - (Optional) An object representing fields to update for the subscriber.</li>
+	            <li><code>newEmail</code> - (Optional) The new email address for the subscriber.</li>
+	            <li><code>newSmsNumber</code> - (Optional) The new SMS number for the subscriber.</li>
+	        </ul>
+	    </dd>
+	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
+	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+	    <dt>On success:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
+	        </ul>
+	    </dd>
+	    <dt>On failure:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	            <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing subscriber ID" or API error message).</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Node Status</h3>
+	<ul>
+	    <li><strong>Green (dot)</strong> - Subscriber was updated successfully.</li>
+	    <li><strong>Red (ring)</strong> - Failed to update subscriber (e.g., missing subscriber ID, invalid data, or API error).</li>
+	</ul>
+	<h3>Details</h3>
+	<p>
+	    This node updates a subscriber in KlickTipp using their subscriber ID. The subscriber ID must be provided in
+	    <code>msg.payload.subscriberId</code>. You can update various subscriber details, such as their fields, email, or SMS number.
+	    If no data is provided, the node will not perform the update. Valid session information, including <code>sessionId</code>
+	    and <code>sessionName</code>, must be provided in <code>msg.klicktipp</code>. If the operation is successful, the output message
+	    will contain <code>msg.payload.success = true</code>. On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>,
+	    and an error message will be returned in <code>msg.error</code>.
+	</p>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp subscriber update', {
 		category: 'KlickTipp',
-		color: "#a6bbcf",
+		color: '#F2F2F2',
 		defaults: {
-			klicktipp: {type: "klicktipp-config", required: true},
-			name: {value: ""}
+			klicktipp: { type: 'klicktipp-config', required: true },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: "klicktipp.png",
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || "KlickTipp Subscriber Update";
-		}
+			return this.name || 'KlickTipp Subscriber Update';
+		},
 	});
 </script>
