--- a/nodes/klicktipp-subscription-process-index.html
+++ b/nodes/klicktipp-subscription-process-index.html
@@ -1,68 +1,68 @@
 <script type="text/x-red" data-template-name="klicktipp subscription process index">
 	<div class="form-row">
-        <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-        <input type="text" id="node-input-klicktipp" data-i18n="config node">
-    </div>
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-input-name" placeholder="Enter node name">
-    </div>
+	       <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	       <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	   </div>
+	   <div class="form-row">
+	       <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	       <input type="text" id="node-input-name" placeholder="Enter node name">
+	   </div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscription process index">
 	<p>Fetches all subscription processes (lists) from the KlickTipp API for the logged-in user.</p>
-    <h3>Inputs</h3>
-    <dl class="message-properties">
-        <dt>msg.klicktipp<span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain the following:
-            <ul>
-                <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-                <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Outputs</h3>
-    <dl class="message-properties">
-        <dd>
-            On success:
-            <ul>
-                <li><code>msg.payload</code> - An associative array where each key is the list ID, and the value is the subscription process name.</li>
-            </ul>
-            On failure:
-            <ul>
-            	<li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-                <li><code>msg.error</code> - An error message indicating why the request failed.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Node Status</h3>
-    <ul>
-        <li><strong>Green (dot)</strong> - Subscription processes fetched successfully.</li>
-        <li><strong>Red (ring)</strong> - Failed to fetch subscription processes due to an error.</li>
-    </ul>
-    <h3>Details</h3>
-    <p>
+	   <h3>Inputs</h3>
+	   <dl class="message-properties">
+	       <dt>msg.klicktipp<span class="property-type">object</span></dt>
+	       <dd>
+	           An object that must contain the following:
+	           <ul>
+	               <li><code>sessionId</code> - The session ID obtained from the login node.</li>
+	               <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
+	           </ul>
+	       </dd>
+	   </dl>
+	   <h3>Outputs</h3>
+	   <dl class="message-properties">
+	       <dd>
+	           On success:
+	           <ul>
+	               <li><code>msg.payload</code> - An associative array where each key is the list ID, and the value is the subscription process name.</li>
+	           </ul>
+	           On failure:
+	           <ul>
+	           	<li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	               <li><code>msg.error</code> - An error message indicating why the request failed.</li>
+	           </ul>
+	       </dd>
+	   </dl>
+	   <h3>Node Status</h3>
+	   <ul>
+	       <li><strong>Green (dot)</strong> - Subscription processes fetched successfully.</li>
+	       <li><strong>Red (ring)</strong> - Failed to fetch subscription processes due to an error.</li>
+	   </ul>
+	   <h3>Details</h3>
+	   <p>
 		This node fetches a list of all subscription processes (lists) available to the logged-in user via the KlickTipp API.
 		Session information must be passed in <code>msg.klicktipp</code>, containing both <code>sessionId</code> and <code>sessionName</code>.
 		Upon success, the output will contain an associative array, where the keys represent list IDs and the values are the corresponding subscription process names.
 		On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-    </p>
+	   </p>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp subscription process index', {
 		category: 'KlickTipp',
-		color: "#a6bbcf",
+		color: '#F2F2F2',
 		defaults: {
-			klicktipp: { type: "klicktipp-config", required: true },
-			name: { value: "" }
+			klicktipp: { type: 'klicktipp-config', required: true },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: "klicktipp.png",
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || "KlickTipp Subscription Process Index";
-		}
+			return this.name || 'KlickTipp Subscription Process Index';
+		},
 	});
 </script>
