--- a/nodes/klicktipp-tag-email.html
+++ b/nodes/klicktipp-tag-email.html
@@ -1,79 +1,79 @@
 <script type="text/x-red" data-template-name="klicktipp tag email">
-    <div class="form-row">
-        <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-        <input type="text" id="node-input-klicktipp" data-i18n="config node">
-    </div>
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-        <input type="text" id="node-input-name" placeholder="Enter node name">
-    </div>
+	<div class="form-row">
+	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	</div>
+	<div class="form-row">
+	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	    <input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp tag email">
-    <p>Tags a subscriber (identified by their email) with one or more tags in KlickTipp. This node requires valid session information to perform the action.</p>
-    <h3>Inputs</h3>
-    <dl class="message-properties">
-        <dt>msg.payload <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>email</code> - (Required) The email address of the subscriber to be tagged.</li>
-                <li><code>tagIds</code> - (Required) An array of tag IDs or a single tag ID to associate with the subscriber. If a single tag ID is provided, it will be converted into an array.</li>
-            </ul>
-        </dd>
-        <dt>msg.klicktipp <span class="property-type">object</span></dt>
-        <dd>
-            An object that must contain:
-            <ul>
-                <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-                <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Outputs</h3>
-    <dl class="message-properties">
-        <dt>On success:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - The response data from the KlickTipp API indicating that the email has been successfully tagged.</li>
-            </ul>
-        </dd>
-        <dt>On failure:</dt>
-        <dd>
-            <ul>
-                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-                <li><code>msg.error</code> - A string describing the error that occurred (e.g., "No valid tag IDs provided" or API error message).</li>
-            </ul>
-        </dd>
-    </dl>
-    <h3>Node Status</h3>
-    <ul>
-        <li><strong>Green (dot)</strong> - The email was tagged successfully.</li>
-        <li><strong>Red (ring)</strong> - The tagging process failed (e.g., missing email, tag IDs, or API error).</li>
-    </ul>
-    <h3>Details</h3>
-    <p>
-        This node tags a subscriber in KlickTipp using their email and a list of tag IDs. The email and tag IDs must be provided in
-        <code>msg.payload.email</code> and <code>msg.payload.tagIds</code>, respectively. If only a single tag ID is provided, it will be converted
-        into an array. Valid session information (sessionId and sessionName) must also be provided in <code>msg.klicktipp</code>. If the operation is successful,
-        the output message will contain the response data from the KlickTipp API in <code>msg.payload</code>. On failure, <code>msg.payload</code> will
-        contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-    </p>
+	<p>Tags a subscriber (identified by their email) with one or more tags in KlickTipp. This node requires valid session information to perform the action.</p>
+	<h3>Inputs</h3>
+	<dl class="message-properties">
+	    <dt>msg.payload <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>email</code> - (Required) The email address of the subscriber to be tagged.</li>
+	            <li><code>tagIds</code> - (Required) An array of tag IDs or a single tag ID to associate with the subscriber. If a single tag ID is provided, it will be converted into an array.</li>
+	        </ul>
+	    </dd>
+	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
+	    <dd>
+	        An object that must contain:
+	        <ul>
+	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
+	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+	    <dt>On success:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - The response data from the KlickTipp API indicating that the email has been successfully tagged.</li>
+	        </ul>
+	    </dd>
+	    <dt>On failure:</dt>
+	    <dd>
+	        <ul>
+	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+	            <li><code>msg.error</code> - A string describing the error that occurred (e.g., "No valid tag IDs provided" or API error message).</li>
+	        </ul>
+	    </dd>
+	</dl>
+	<h3>Node Status</h3>
+	<ul>
+	    <li><strong>Green (dot)</strong> - The email was tagged successfully.</li>
+	    <li><strong>Red (ring)</strong> - The tagging process failed (e.g., missing email, tag IDs, or API error).</li>
+	</ul>
+	<h3>Details</h3>
+	<p>
+	    This node tags a subscriber in KlickTipp using their email and a list of tag IDs. The email and tag IDs must be provided in
+	    <code>msg.payload.email</code> and <code>msg.payload.tagIds</code>, respectively. If only a single tag ID is provided, it will be converted
+	    into an array. Valid session information (sessionId and sessionName) must also be provided in <code>msg.klicktipp</code>. If the operation is successful,
+	    the output message will contain the response data from the KlickTipp API in <code>msg.payload</code>. On failure, <code>msg.payload</code> will
+	    contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
 </script>
 
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp tag email', {
 		category: 'KlickTipp',
-		color: "#a6bbcf",
+		color: '#F2F2F2',
 		defaults: {
-			klicktipp: { type: "klicktipp-config", required: true },
-			name: { value: "" }
+			klicktipp: { type: 'klicktipp-config', required: true },
+			name: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: "klicktipp.png",
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || "KlickTipp Tag Email";
-		}
+			return this.name || 'KlickTipp Tag Email';
+		},
 	});
 </script>
