Fixed the icon size

--- a/nodes/klicktipp-subscriber-index.html
+++ b/nodes/klicktipp-subscriber-index.html
@@ -62,7 +62,7 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.svg',
+		icon: 'klicktipp.png',
 		label: function () {
 			return this.name || 'KlickTipp Subscriber Index';
 		},
