--- a/nodes/klicktipp-signoff.html
+++ b/nodes/klicktipp-signoff.html
@@ -65,7 +65,7 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.svg',
+		icon: 'klicktipp.png',
 		label: function () {
 			return this.name || 'KlickTipp Signoff';
 		},
