--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -74,7 +74,7 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.svg',
+		icon: 'klicktipp.png',
 		label: function () {
 			return this.name || 'KlickTipp Subscriber Update';
 		},
