--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -68,7 +68,7 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.svg',
+		icon: 'klicktipp.png',
 		label: function () {
 			return this.name || 'KlickTipp Subscription Process Redirect';
 		},
