--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -71,7 +71,7 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.svg',
+		icon: 'klicktipp.png',
 		label: function () {
 			return this.name || 'KlickTipp Tag Create';
 		},
